[gd_scene load_steps=6 format=3 uid="uid://c45hwtctunisa"]

[ext_resource type="Script" path="res://scene/clock.gd" id="1_eaf8d"]
[ext_resource type="Texture2D" uid="uid://cu2hdbbkxokcx" path="res://image1.png" id="2_fpxl7"]
[ext_resource type="Texture2D" uid="uid://d1i8fvn2ctt67" path="res://ticker.png" id="3_cf3fb"]

[sub_resource type="LabelSettings" id="LabelSettings_avmaj"]
line_spacing = -6.0
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xqw2g"]
font_color = Color(0, 0, 0, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_eaf8d")

[node name="image1" type="Sprite2D" parent="."]
position = Vector2(523.418, 270)
texture = ExtResource("2_fpxl7")

[node name="TICKER1" type="Node2D" parent="."]
position = Vector2(480, 270)

[node name="ticker" type="Sprite2D" parent="TICKER1"]
position = Vector2(0, -50)
scale = Vector2(1, 0.5)
texture = ExtResource("3_cf3fb")

[node name="TICKER2" type="Node2D" parent="."]
position = Vector2(480, 270)

[node name="ticker" type="Sprite2D" parent="TICKER2"]
position = Vector2(0, -100)
texture = ExtResource("3_cf3fb")

[node name="TICKER3" type="Node2D" parent="."]
position = Vector2(480, 270)

[node name="ticker" type="Sprite2D" parent="TICKER3"]
position = Vector2(0, -100)
texture = ExtResource("3_cf3fb")

[node name="Text" type="Label" parent="."]
offset_left = 6.0
offset_top = 6.0
offset_right = 205.0
offset_bottom = 525.0
label_settings = SubResource("LabelSettings_avmaj")

[node name="Options" type="VBoxContainer" parent="."]
offset_left = 805.0
offset_top = 301.0
offset_right = 935.0
offset_bottom = 519.0

[node name="totals" type="CheckButton" parent="Options"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
text = "totals"

[node name="hr24" type="CheckButton" parent="Options"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
text = "24"

[node name="biblical" type="CheckButton" parent="Options"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
text = "biblical"

[node name="system" type="CheckButton" parent="Options"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
text = "system"

[node name="fineHands" type="CheckButton" parent="Options"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
text = "fine hands"

[node name="speedScale" type="HScrollBar" parent="Options"]
layout_mode = 2
min_value = -100.0

[node name="Label" type="Label" parent="Options/speedScale"]
layout_mode = 0
offset_left = -80.0
offset_top = -6.0
offset_right = -4.0
offset_bottom = 46.0
text = "speed
multiplier"
label_settings = SubResource("LabelSettings_xqw2g")
horizontal_alignment = 2

[node name="multiplier" type="LineEdit" parent="Options"]
layout_mode = 2
text = "1"
